crates/rooch-integration-test-runner/tests/cases/private_generics_indirect_call.exp
processed 3 tasks

task 1 'publish'. lines 3-8:
status EXECUTED

task 2 'publish'. lines 10-41:
Error: error: resource type "KeyStruct" in function "0x2::storage_context::remove_object" not defined in current module or not allowed
   ┌─ /tmp/tempfile:32:19
   │
32 │         let obj = storage_context::remove_object<KeyStruct>(ctx, object_id);
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "KeyStruct" in function "0x2::object::unpack" not defined in current module or not allowed
   ┌─ /tmp/tempfile:34:34
   │
34 │         let (_id,_owner,value) = object::unpack(obj);
   │                                  ^^^^^^^^^^^^^^^^^^^

error: resource type "KeyStruct" in function "0x2::account_storage::global_move_to" not defined in current module or not allowed
   ┌─ /tmp/tempfile:35:9
   │
35 │         account_storage::global_move_to(ctx, sender, value);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "KeyStruct" in function "0x42::test::publish_foo" not defined in current module or not allowed
   ┌─ /tmp/tempfile:28:9
   │
28 │         publish_foo<KeyStruct>(ctx, s)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


